k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pal-tracker
  labels:
    app: pal-tracker
spec:
  #  replicas: 3
  selector:
    matchLabels:
      app: pal-tracker
      name: pal-tracker-pod
  template:
    # Pod definition starts here
    metadata:
      labels:
        app: pal-tracker
        name: pal-tracker-pod
    spec:
      containers:
        - name: pal-tracker-container
          image: kcnagareddy/pal-tracker:v3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
          lifecycle:
            preStop:
              exec:
                command: [ "/bin/sleep", "30" ]
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 150
